--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,12 @@ nav {
 .logo {
   width: 100px;
 }
+
+.inactive {
+  display: none;
+}
+
+/* NAVBAR */
 .navbar-left ul,
 .navbar-right ul {
   list-style: none;
@@ -76,9 +82,7 @@ nav {
   align-items: center;
 }
 
-.inactive {
-  display: none;
-}
+/* DESKTOP MENU */
 
 .desktop-menu {
   position: absolute;
@@ -118,6 +122,38 @@ nav {
   display: inline-block;
 }
 
+/* MOBILE MENU */
+.mobile-menu {
+  position: absolute;
+  top: 60px;
+  padding: 24px;
+}
+.mobile-menu a {
+  text-decoration: none;
+  color: var(--black);
+  font-weight: bold;
+  /* margin-bottom: 24px; */
+}
+.mobile-menu ul {
+  padding: 0;
+  margin: 24px 0 0;
+  list-style: none;
+}
+.mobile-menu ul:nth-child(1) {
+  border-bottom: 1px solid var(--very-light-pink);
+}
+.mobile-menu ul li {
+  margin-bottom: 24px;
+}
+.email {
+  font-size: var(--sm);
+  font-weight: 300 !important;
+}
+.sign-out {
+  font-size: var(--sm);
+  color: var(--hospital-green) !important;
+}
+
 @media (max-width: 640px) {
   .menu {
     display: block;
@@ -126,6 +162,15 @@ nav {
     display: none;
   }
   .navbar-email {
+    display: none;
+  }
+  .desktop-menu {
+    display: none;
+  }
+}
+
+@media (min-width: 641px) {
+  .mobile-menu {
     display: none;
   }
 }
